--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-assignment-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-assignment-edit.component.html
@@ -123,6 +123,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row top-buffer">
+                            <div class="col-md-12">
+                                <div class="col-md-2">&nbsp;</div>
+                                <div class="col-md-10">
+                                    <label class="checkbox-inline control-label col-md-2" for="isViewableByAllCheckbox">
+                                        <input  type="checkbox" id="isViewableByAllCheckbox" name="isViewableByAllCheckbox" [(ngModel)]="assignment.isViewableByAll"/>
+                                        <span>Make viewable for everyone</span>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
 
                         <br/>
                         <div class="row top-buffer">
