Added functionality of making IC Assignments viewable for everyone

--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-assignment-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-assignment-edit.component.html
@@ -128,7 +128,7 @@
                                 <div class="col-md-2">&nbsp;</div>
                                 <div class="col-md-10">
                                     <label class="checkbox-inline control-label col-md-2" for="isViewableByAllCheckbox">
-                                        <input  type="checkbox" id="isViewableByAllCheckbox" name="isViewableByAllCheckbox" [(ngModel)]="assignment.isViewableByAll"/>
+                                        <input  type="checkbox" id="isViewableByAllCheckbox" name="isViewableByAllCheckbox" [(ngModel)]="assignment.viewableByAll"/>
                                         <span>Make viewable for everyone</span>
                                     </label>
                                 </div>
