--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -191,11 +191,11 @@
                                     <td>{{(fund.added ? '* ' : '') + fund.fundName}}</td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
-                                    <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td>{{fund.annualizedReturn | number:'1.2-2'}}</td>
                                     <td>{{fund.sortino | number:'1.2-2' }}</td>
                                     <td>{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td>{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td>{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td>{{fund.cfVar| number:'1.2-2'}}</td>
+                                    <td>{{fund.alpha| number:'1.2-2'}}</td>
                                     <td>{{fund.omega| number:'1.2-2'}}</td>
                                     <td style="background-color: #f9eaea;">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td>{{getAmountShort(fund.fundAUM)}}</td>
@@ -251,11 +251,11 @@
                                     <td>{{fund.fundName}}</td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
-                                    <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td>{{fund.annualizedReturn | number:'1.2-2'}}</td>
                                     <td>{{fund.sortino | number:'1.2-2' }}</td>
                                     <td>{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td>{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td>{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td>{{fund.cfVar| number:'1.2-2'}}</td>
+                                    <td>{{fund.alpha| number:'1.2-2'}}</td>
                                     <td>{{fund.omega| number:'1.2-2'}}</td>
                                     <td style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td>{{getAmountShort(fund.fundAUM)}}</td>
@@ -1039,11 +1039,11 @@
                                     <td>{{(fund.added ? '* ' : '') + fund.fundName}}</td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
-                                    <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td>{{fund.annualizedReturn | number:'1.2-2'}}</td>
                                     <td>{{fund.sortino | number:'1.2-2' }}</td>
                                     <td>{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td>{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td>{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td>{{fund.cfVar| number:'1.2-2'}}</td>
+                                    <td>{{fund.alpha| number:'1.2-2'}}</td>
                                     <td>{{fund.omega| number:'1.2-2'}}</td>
                                     <td style="background-color: #f9eaea;">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td>{{getAmountShort(fund.fundAUM)}}</td>
@@ -1098,11 +1098,11 @@
                                     <td>{{fund.fundName}}</td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
-                                    <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td>{{fund.annualizedReturn | number:'1.2-2'}}</td>
                                     <td>{{fund.sortino | number:'1.2-2' }}</td>
                                     <td>{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td>{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td>{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td>{{fund.cfVar| number:'1.2-2'}}</td>
+                                    <td>{{fund.alpha| number:'1.2-2'}}</td>
                                     <td>{{fund.omega| number:'1.2-2'}}</td>
                                     <td style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td>{{getAmountShort(fund.fundAUM)}}</td>
@@ -1480,11 +1480,11 @@
 <!--                                        <span style="color:green"  *ngIf="fund.trackRecordCheck" class="glyphicon glyphicon-ok"></span>-->
 <!--                                        <span style="color:red" *ngIf="!fund.trackRecordCheck" class="glyphicon glyphicon-remove"></span>-->
 <!--                                    </td>-->
-                                    <td *ngIf="fundListType == 1">{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.annualizedReturn | number:'1.2-2'}}</td>
                                     <td *ngIf="fundListType == 1">{{fund.sortino | number:'1.2-2' }}</td>
                                     <td *ngIf="fundListType == 1">{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td *ngIf="fundListType == 1">{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td *ngIf="fundListType == 1">{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.cfVar| number:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.alpha| number:'1.2-2'}}</td>
                                     <td *ngIf="fundListType == 1">{{fund.omega| number:'1.2-2'}}</td>
                                     <td  *ngIf="fundListType == 1" style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td align="center">
