--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -655,7 +655,34 @@
                                         <tr *ngFor="let row of filteredResult?.filteredResultStatistics?.qualified; let i=index" [style.background-color]="i==0 ? '#D5E1EC' : white"
                                             align="right" [style.font-weight]="i==0 ? 'bold' : ''">
                                             <td *ngFor="let td of row; let j=index" [style.background-color]="getCellColor(i,j)" align="center" [style.color]="white" [style.font-weight]="j==0 ? 'bold' : ''">
-                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 1, td)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
+                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 1, td, false)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
+                                                <span *ngIf="i == 0 || j == 0 || td == 0">{{td}}</span>
+                                            </td>
+                                        </tr>
+                                        <!--                                <tr>-->
+                                        <!--                                    <td [attr.colspan]="filteredResult.filteredResultStatistics.qualified.length" style="font-weight: bold" align="left">RETURN LOOKBACK</td>-->
+                                        <!--                                </tr>-->
+                                    </table>
+                                </div>
+                            </div>
+
+                            <br/>
+                            <h4>Alternative Scoring</h4>
+                            <div class="row withpadding">
+                                <div *ngIf="filteredResult?.filteredResultStatistics?.qualified?.length > 0">
+                                    <table class="table table-hover">
+                                        <tr>
+                                            <td [attr.colspan]="filteredResult.filteredResultStatistics.qualified[0].length + 1" style="font-weight: bold" align="right">AUM LOOKBACK</td>
+                                        </tr>
+                                        <tr>
+                                            <td [attr.rowspan]="filteredResult.filteredResultStatistics.qualified.length + 1" style="font-weight: bold;">
+                                                <div align="right" style="writing-mode: vertical-rl;">RETURN LOOKBACK</div>
+                                            </td>
+                                        </tr>
+                                        <tr *ngFor="let row of filteredResult?.filteredResultStatistics?.qualified; let i=index" [style.background-color]="i==0 ? '#D5E1EC' : white"
+                                            align="right" [style.font-weight]="i==0 ? 'bold' : ''">
+                                            <td *ngFor="let td of row; let j=index" [style.background-color]="getCellColor(i,j)" align="center" [style.color]="white" [style.font-weight]="j==0 ? 'bold' : ''">
+                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 1, td, true)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
                                                 <span *ngIf="i == 0 || j == 0 || td == 0">{{td}}</span>
                                             </td>
                                         </tr>
@@ -855,7 +882,7 @@
                                         <tr *ngFor="let row of filteredResult?.filteredResultStatistics?.unqualified; let i=index" [style.background-color]="i==0 ? '#D5E1EC' : white"
                                             align="right" [style.font-weight]="i==0 ? 'bold' : ''">
                                             <td *ngFor="let td of row; let j=index" [style.background-color]="getCellColor(i,j)" align="right" [style.color]="white" [style.font-weight]="j==0 ? 'bold' : ''" align="center">
-                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 2, td)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
+                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 2, td, false)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
                                                 <span *ngIf="i == 0 || j == 0 || td == 0">{{td}}</span>
                                             </td>
                                         </tr>
@@ -883,7 +910,7 @@
                                         <tr *ngFor="let row of filteredResult?.filteredResultStatistics?.undecided; let i=index" [style.background-color]="i==0 ? '#D5E1EC' : white"
                                             align="right" [style.font-weight]="i==0 ? 'bold' : ''">
                                             <td *ngFor="let td of row; let j=index" [style.background-color]="getCellColor(i,j)" align="center" [style.color]="white" [style.font-weight]="j==0 ? 'bold' : ''">
-                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 3, td)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
+                                                <a *ngIf="i != 0 && j != 0 && td != 0" (click)="showFunds(i-1, j-1, 3, td, false)" style="color: white" data-toggle="modal" data-target="#fundListModal">{{td}}</a>
                                                 <span *ngIf="i == 0 || j == 0 || td == 0">{{td}}</span>
                                             </td>
                                         </tr>
@@ -1406,7 +1433,8 @@
                         </div>
                     </div>
                     <div class="row withpadding" *ngIf="fundListType == 1 || fundListType == 2">
-                        <button class="btn btn-primary pull-left" (click)="exportFundList()">Export as XLSX</button>
+                        <button *ngIf="isAlternative" class="btn btn-primary pull-left" (click)="exportFundList()">Export as XLSX</button>
+                        <button *ngIf="!isAlternative" class="btn btn-primary pull-left" (click)="exportFundList()">Export as XLSX</button>
                         <span class="pull-right">&nbsp;</span>
                     </div>
                     <div class="row">&nbsp;</div>
